@@ -1,5 +1,6 @@
 Revision history for Sys-Syslog
 
+        [BUGFIX] CPAN-RT#105152: the noeol option was ignored (Markus Laker).
         [PORT] CPAN-RT#104710: loadable library and perl binaries are mismatched,
         because of missing CCFLAGS (CHORNY, KMX).
         [PORT] No longer inheriting from Exporter doesn't work before Perl 5.8.3.
